--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,14 @@
-fastapi==0.103.0
-sqlalchemy==2.0.20
-pydantic==2.3.0
-pytest==7.4.0
-uvicorn==0.23.0
+fastapi==0.104.1
+sqlalchemy==2.0.23
+pydantic==2.5.0
+pytest==7.4.3
+uvicorn[standard]==0.24.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-asyncpg==0.28.0
+asyncpg==0.29.0
 pytest-asyncio==0.21.1
-httpx==0.24.1
-email-validator==2.0.0
-alembic==1.12.0
+httpx==0.25.2
+email-validator==2.1.0
+alembic==1.13.1
 python-multipart==0.0.6
+psycopg2-binary==2.9.9
