--- a/render.yaml
+++ b/render.yaml
@@ -1,39 +1,7 @@
 services:
   - type: web
-    name: community-platform-backend
+    name: python-version-test
     env: python
-    region: oregon
-    plan: starter
     pythonVersion: 3.11
-    
-    # Commands are now run from the 'backend' directory
-    buildCommand: |
-      cd backend
-      pip install --upgrade pip
-      pip install -r requirements.txt
-      python -m alembic upgrade head
-      
-    startCommand: "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
-    
-    healthCheckPath: /health
-
-    envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: community-platform-db
-          property: connectionString
-      - key: JWT_SECRET_KEY
-        generateValue: true
-      - key: JWT_ACCESS_TOKEN_EXPIRE_MINUTES
-        value: "30"
-      - key: ENVIRONMENT
-        value: "production"
-      - key: DEBUG
-        value: "false"
-      - key: CORS_ORIGINS
-        value: "https://your-frontend-domain.vercel.app,https://your-custom-domain.com"
-
-databases:
-  - name: community-platform-db
-    plan: starter
-    region: oregon
+    buildCommand: "echo 'Build command'"
+    startCommand: "echo 'Start command'"
