--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,28 @@
 services:
   - type: web
-    name: python-version-test
+    name: community-platform-backend
     env: python
     pythonVersion: 3.11
-    buildCommand: "echo 'Build command'"
-    startCommand: "echo 'Start command'"
+    plan: starter
+    region: oregon
+    buildCommand: |
+      cd backend
+      pip install --upgrade pip
+      pip install -r requirements.txt
+      python -m alembic upgrade head
+    startCommand: "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+    healthCheckPath: /health
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: community-platform-db
+          property: connectionString
+      - key: JWT_SECRET_KEY
+        generateValue: true
+      - key: ENVIRONMENT
+        value: production
+
+databases:
+  - name: community-platform-db
+    plan: starter
+    region: oregon
